# experimenterML

./: README.md  guia.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
configs/: exp_example.yaml
src/experimenterML/: Experiment.py  __init__.py  callbacks.py  cli.py  dashboard.py  logging_utils.py  repetitions.py  runner.py
tests/: example_module.py  exp_example.yaml  results.csv  test.py  test_repetitions.py  test_runner.py
