[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "experimenterML"
version = "0.1.0"
description = "Lightweight experiment manager: grid sweeps, hashing, CSV/JSON logging, resume"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
keywords = ["experiments", "reproducibility", "grid-search"]
dependencies = []

[project.scripts]
exp = "experimenterML.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/experimenterML"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E203", "E266", "E501", "W503"]

